Responsive fixed, reduce padding size a bit

--- a/index.html
+++ b/index.html
@@ -39,25 +39,24 @@
             </div>
 
             <div class="mobile only narrow row">
-                <div class="ui top sidebar vertical menu navbar">
+                <div class="ui menu navbar fixed">
+                    <a href="#" class="brand item">
+                        <h1 class="ui monospace header">{{ehkoo}}</h1>
+                    </a>
+
+                    <div class="right menu open">
+                        <a href="#" class="menu item">
+                            <i class="reorder large icon"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="ui vertical menu navbar">
                     <a href="" class="item">Trang Chủ</a>
                     <a href="" class="item">Lưu Trữ</a>
                     <a href="" class="item">Liên Hệ</a>
                     <a href="https://facebook.com/ehkoo" class="item" target="_blank">Facebook <i class="facebook large icon"></i></a>
                     <a href="https://twitter.com/ehkoo" class="item" target="_blank">Twitter <i class="twitter large icon"></i></a>
                     <a href="https://github.com/ehkoo" class="item" target="_blank">Github <i class="github large icon"></i></a>
-                </div>
-
-                <div class="ui fixed menu navbar">
-                    <a href="#" class="brand item">
-                        <h1 class="ui monospace header">{{ehkoo}}</h1>
-                    </a>
-
-                    <div class="right menu">
-                        <a href="#" class="menu item">
-                            <i class="reorder large icon"></i>
-                        </a>
-                    </div>
                 </div>
             </div>
         </nav>
